--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="style/style.css" rel="stylesheet">
-    <link href="style/bootstrap.css" rel="stylesheet">
-    <link href="style/bootstrap-theme.css" rel="stylesheet">
-    <link href="style/animation.css" rel="stylesheet">
-    <script src="script/jquery.js"></script>
-    <script src="script/jquery.mousewheel.js"></script>
-    <script src="script/bootstrap.js"></script>
-    <script src="script/layout.js"></script>
+    <link href="./style/style.css" rel="stylesheet">
+    <link href="./style/bootstrap.css" rel="stylesheet">
+    <link href="./style/bootstrap-theme.css" rel="stylesheet">
+    <link href="./style/animation.css" rel="stylesheet">
+    <script src="./script/jquery.js"></script>
+    <script src="./script/jquery.mousewheel.js"></script>
+    <script src="./script/bootstrap.js"></script>
+    <script src="./script/layout.js"></script>
 </head>
 <body>
 <div id="home">
@@ -77,6 +77,6 @@
 <!--<br /><br /><br /><br /><br /><br /><br /><br />-->
 <!--<br /><br /><br /><br /><br /><br /><br /><br />-->
 <!--<br /><br /><br /><br /><br /><br /><br /><br />-->
-<script src="script/main.js"></script>
+<script src="./script/main.js"></script>
 </body>
 </html>
